samples/_failures_safe/1761096299_c90bc8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a42d1f19.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_a42d1f19.c:164: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_a42d1f19.c:163:9: error: expected declaration or statement at end of input
  163 |         if
      |         ^~
./samples/SAFE/__tmp_a42d1f19.c:163:9: error: expected declaration or statement at end of input
